<resources>
    <string name="app_name">InitiativeTracker</string>
    <string name="splash_title">Initiative\nTracker</string>
    <string name="splash_site">More apps at\nwww.rekijan.nl</string>
    <string name="title_activity_main">Initiative Tracker</string>
    <string name="action_next_turn">Next turn</string>
    <string name="action_sort">Sort</string>
    <string name="action_add_character">Add a character</string>
    <string name="action_delete_character">Delete a character</string>
    <string name="action_set_pcs_max_hp">Set PCs at max hp</string>
    <string name="action_start_turn_info">Start Turn info</string>
    <string name="action_end_turn_info">End Turn info</string>
    <string name="action_about">About</string>
    <string name="action_privacy">Privacy Policy</string>
    <string name="action_tip">Tip the dev</string>
    <string name="toast_max_hp">The following PCs did not get updated because their max hp was not higher then their current hp.\n\u0020\n%1$s</string>
    <string name="toast_wounded_removed">The healed PC(s) had their wounded value reset to 0 (because they were healed to max).</string>
    <string name="toast_recovered_from_dying_by_healing">%1$s received healing and is no longer dying, wounded value has been increased as well.</string>
    <string name="toast_recovered_from_dying_by_recovery_checks">%1$s reduced its dying entirely and is now stabilized at 0hp (wounded value has been increased).\nIt now takes its turn normally (though it might be still unconscious at 0hp).</string>
    <string name="toast_recovered_from_dying_by_hero_points">%1$s used its Hero Points to remove dying entirely and is now stabilized at 0hp (no increase to its wounded value).\nIt now takes its turn normally (though it might be still unconscious at 0hp).</string>
    <string name="char_card_initiative">Init</string>
    <string name="char_card_hp">HP</string>
    <string name="char_card_buffs">Buffs or</string>
    <string name="char_card_debuffs">(De)buffs:</string>
    <string name="char_card_show_more">Show\nMore</string>
    <string name="char_card_other_reactions">Other\nReactions</string>
    <string name="char_card_hero_points">Hero Points</string>
    <string name="char_card_reaction">Reaction</string>
    <string name="char_card_reactions_available_label">%1$d other reactions available</string>
    <string name="char_card_reaction_available_label">1 other reaction available</string>
    <string name="char_card_dying_label">Dying: %1$d out of %2$d (wounded %3$d, doomed %4$d). Recovery Check: DC%5$d.</string>
    <string name="debuff_card_name">(De)buff name</string>
    <string name="debuff_card_duration">10</string>
    <string name="debuff_card_duration_label">Duration\n(rounds)</string>
    <string name="debuff_card_description">(De)buff description</string>
    <string name="debuff_card_remove_button">Remove</string>
    <string name="reaction_details_name_title">Non-standard reactions for :\u0020 %1$s</string>
    <string name="debuff_wizard_hide_desc">Hide descriptions</string>
    <string name="debuff_wizard_reminder">Don\'t forget to fill in at least a duration or value. If the value decreases each turn submit it as a duration instead.</string>
    <string name="condition_card_duration_label">Duration\n(rounds)</string>
    <string name="condition_card_value_label">Value</string>
    <string name="reaction_card_name">Reaction name</string>
    <string name="reaction_card_available">Available</string>
    <string name="reaction_card_description">Reaction description</string>
    <string name="reaction_card_remove_button">Remove</string>
    <string name="char_detail_switch_pc_on">Character is a  PC</string>
    <string name="char_detail_switch_is_dying_on">Is dying</string>
    <string name="char_detail_initiative_bonus">Initiative bonus</string>
    <string name="char_detail_max_hp">Max hp</string>
    <string name="char_detail_fast_healing">Fast Healing</string>
    <string name="char_detail_regeneration">Regeneration</string>
    <string name="char_detail_dying">Dying value</string>
    <string name="char_detail_max_dying">Max</string>
    <string name="char_detail_wounded">Wounded value</string>
    <string name="char_detail_doomed">Doomed value</string>
    <string name="char_detail_recovery_dc">Starting\nRecovery DC</string>
    <string name="char_detail_hero_points">Hero points</string>
    <string name="char_detail_skills">Skills</string>
    <string name="char_detail_attack_routine">Attack routine</string>
    <string name="char_detail_attack_routine_hint">to hit/damage</string>
    <string name="char_detail_ac">AC</string>
    <string name="char_detail_saves">Fort Ref Will</string>
    <string name="char_detail_notes">Notes</string>
    <string name="char_detail_debuffs">Debuffs, buffs, spells</string>
    <string name="char_detail_add_button">Add</string>
    <string name="char_detail_clear_button">Clear all</string>
    <string name="up_button_label">Λ</string>
    <string name="down_button_label">v</string>
    <string name="edit_order_instruction">Press and hold a character to set it to be the one first in the round.</string>
    <string name="EH_character_name">Character name</string>
    <string name="EH_character_notes">Notes</string>
    <string name="debuff_expired">Debuff %s expired</string>
    <string name="debuff_top_left">top left</string>
    <string name="debuff_middle_top">middle top</string>
    <string name="debuff_top_right">top right</string>
    <string name="debuff_bottom_left">bottom left</string>
    <string name="debuff_middle_bottom">middle bottom</string>
    <string name="debuff_bottom_right">bottom right</string>
    <string name="debuff_added_empty">Added empty (de)buff</string>
    <string name="debuff_added_existing">Condition %1$s added</string>
    <string name="debuff_added_persistent_damage">Added persistent damage</string>
    <string name="debuff_added_poison">Added %1$s poison</string>
    <string name="add_empty">Add empty</string>
    <string name="add_poison">Add poison</string>
    <string name="add_persistent">Persistent\ndamage</string>
    <string name="persistent_dialog_title">Create a persistent damage debuff</string>
    <string name="add_persistent_dialog">Add</string>
    <string name="persistent_name">Persistent %1$s damage (%2$s)</string>
    <string name="persistent_name_hint">Name</string>
    <string name="persistent_type_hint">Type (of damage)</string>
    <string name="persistent_damage_hint">5</string>
    <string name="persistent_damage_label">Damage</string>
    <string name="persistent_dc_hint">15</string>
    <string name="persistent_dc_label">DC</string>
    <string name="persistent_duration_hint">0</string>
    <string name="persistent_duration_label">Duration</string>
    <string name="persistent_description_hint">Description</string>
    <string name="persistent_error_label">Damage type can\'t be empty</string>
    <string name="persistent_damage_override">Override value</string>
    <string name="persistent_damage_must_override">Could not find value. Override manually</string>
    <string name="persistent_damage_take_damage">Take Damage</string>
    <string name="persistent_damage_flat_check_success">Flat Check\nsucceeded</string>
    <string name="persistent_damage_dialog_title">Handle %1$s\'s persistent damage</string>
    <string name="apply_persistent_values">Type: %1$s, damage: %2$s, DC: %3$d, duration: %4$d.</string>
    <string name="dialog_persistent_info">Hit apply to take the damage this turn. Note same type damage don\'t stack. Resistances, immunities, and weaknesses apply so you might want to override the values.\nRemove them in character detail screen.</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_close">Close</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_delete">Are you sure you want to delete\u0020</string>
    <string name="empty_character_name">this character</string>
    <string name="dialog_delete_title">Warning: Confirm delete</string>
    <string name="dialog_delete_info">To delete a character press down on it, and hold until a confirmation dialog appears.</string>
    <string name="dialog_delete_info_title">How to delete a character</string>
    <string name="dialog_turn_start_info">At the start of each of your turns, take these steps in any order you choose:\n\n\n
&#8226; If you created an effect lasting for a certain number of rounds, reduce the number of rounds remaining by 1. The effect ends if the duration is reduced to 0.\n\n
&#8226; You can use 1 free action or reaction with a trigger of “Your turn begins” or something similar.\n\n
&#8226; If you are dying, roll a recovery check.\n\n
&#8226; Do anything else that is specified to happen at the start of your turn, such as regaining Hit Points from fast healing or regeneration.\n\n\n
The last step of starting your turn is always the same.\n\n\n
&#8226; Regain your 3 actions and 1 reaction. If you have not spent your reaction from your last turn, you lose it—you can not “save” actions or reactions from one turn to use during the next turn. If a condition prevents you from being able to act, you don not regain any actions or your reaction. Some abilities or conditions (such as quickened and slowed) can change how many actions you regain and whether you regain your reaction. If you lose actions and gain additional actions (such as if you are both quickened and slowed), you choose which actions to lose.</string>
    <string name="dialog_turn_start_info_title">Start Your Turn info</string>
    <string name="dialog_turn_end_info">Take the following steps in any order you choose. Play then proceeds to the next creature in the initiative order.\n\n\n
&#8226; End any effects that last until the end of your turn. For example, spells with a sustained duration end at the end of your turn unless you used the Sustain a Spell action during your turn to extend them. Some effects caused by enemies might also last through a certain number of your turns, and you decrease the remaining duration by 1 during this step, ending the effect if its duration is reduced to 0.\n\n
&#8226; If you have a persistent damage condition, you take the damage at this point. After you take the damage, you can attempt the flat check to end the persistent damage. You then attempt any saving throws for ongoing afflictions. Many other conditions change at the end of your turn, such as the frightened condition decreasing in severity. These take place after you have taken any persistent damage, attempted flat checks to end the persistent damage, and attempted saves against any afflictions.\n\n
&#8226; You can use 1 free action or reaction with a trigger of “Your turn ends” or something similar.\n\n
&#8226; Resolve anything else specified to happen at the end of your turn.</string>
    <string name="dialog_turn_end_info_title">End Your Turn info</string>
    <string name="dialog_about_info">To learn more about the app, and its developer, please visit the website.</string>
    <string name="dialog_about_info_title">About</string>
    <string name="dialog_about_ok">Go to website</string>
    <string name="dialog_recovery_dc">Recovery Check is DC%1$d (This is a flat check).</string>
    <string name="dialog_button_crit_success">Critical Success</string>
    <string name="dialog_button_success">Success</string>
    <string name="dialog_button_failure">Failure</string>
    <string name="dialog_button_crit_failure">Critical Failure</string>
    <string name="dialog_recovery_info_crit_success">Reduce dying value by 2.</string>
    <string name="dialog_recovery_info_success">Reduce dying value by 1.</string>
    <string name="dialog_recovery_info_failure">Reduce dying value by 1.</string>
    <string name="dialog_recovery_info_crit_failure">Reduce dying value by 2.</string>
</resources>